<resources>
    <string name="app_name">Follow The Recipe</string>
    <string name="action_settings">Settings</string>
    <string name="num_ingredients">%1$d ingredients</string>
    <string name="num_directions">%1$d directions</string>
    <string name="recipe_title_hint">Name this recipe</string>
    <string name="take_recipe_pic">Press this button to take a picture of the dish associated with this recipe</string>
    <string name="description_recipe_pic">A picture of the dish associated with this recipe, if it exists</string>
    <string name="ingredients_header">Ingredients</string>
    <string name="directions_header">Directions</string>
    <string name="title_header">Title</string>
    <string name="description_add_ingredient">Press this button to add an ingredient to your recipe"></string>
    <string name="description_add_direction">Press this button to add a direction to your recipe</string>
    <string name="add_hint">Tap the "+" button to add some</string>
    <string name="empty_ingredients_indicator">No ingredients</string>
    <string name="empty_directions_indicator">No directions</string>
    <string name="empty_recipes_indicator">There are no recipes to show</string>
    <string name="add_direction_header">DIRECTION</string>
    <string name="add_ingredient_header">INGREDIENT</string>
    <string name="add_quantity_header">QTY.</string>
    <string name="question_delete">Delete?</string>
    <string name="notify_deleted">Deleted.</string>
    <string name="number_direction_marker">%1$d)</string>
    <string name="input_string">%1$s</string>
    <string name="prompt_save_changes">Would you like to save or discard this recipe?</string>
    <string name="prompt_confirm_recipe_delete">Are you sure you want to delete this recipe?</string>
    <string name="toast_message_recipe_deleted">Recipe deleted.</string>
    <string name="toast_message_recipe_created">Recipe created.</string>
    <string name="toast_message_recipe_updated">Recipe updated.</string>
    <string name="action_delete">Delete Recipe</string>
</resources>
