<?xml version="1.0" encoding="utf-8"?>
<com.woxthebox.draglistview.swipe.ListSwipeItem xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recipe_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:leftViewId="@+id/item_left"
    app:rightViewId="@+id/item_right"
    app:swipeViewId="@+id/recipe_item_layout">

    <TextView
        android:id="@+id/item_left"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/recipe_item_layout"
        android:layout_alignTop="@+id/recipe_item_layout"
        android:gravity="start|center_vertical"
        android:background="#ff0000"
        android:textColor="@android:color/white"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:padding="4dp"
        android:text="@string/question_delete" />

    <TextView
        android:id="@+id/item_right"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/recipe_item_layout"
        android:layout_alignTop="@+id/recipe_item_layout"
        android:gravity="end|center_vertical"
        android:background="#ff0000"
        android:textColor="@android:color/white"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:padding="4dp"
        android:text="@string/question_delete" />

    <RelativeLayout
        android:id="@+id/recipe_item_layout"
        android:layout_width="match_parent"
        android:background="@color/default_background"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/list_item_recipe_image_view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/white"
            android:adjustViewBounds="true"
            android:contentDescription="@string/description_recipe_pic"
            android:cropToPadding="false"
            android:focusableInTouchMode="false"
            android:scaleType="centerInside"
            app:srcCompat="@mipmap/ic_dining" />

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/list_item_recipe_image_view"
            android:layout_toStartOf="@id/list_item_recipe_image_view"
            android:padding="4dp"
            android:text="@string/input_string"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recipe_num_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_title"
            android:layout_toLeftOf="@id/list_item_recipe_image_view"
            android:layout_toStartOf="@id/list_item_recipe_image_view"
            android:padding="4dp"
            android:text="@string/num_ingredients" />

        <TextView
            android:id="@+id/recipe_num_directions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_num_ingredients"
            android:layout_toLeftOf="@id/list_item_recipe_image_view"
            android:layout_toStartOf="@id/list_item_recipe_image_view"
            android:padding="4dp"
            android:text="@string/num_directions" />

        <TextView
            android:id="@+id/recipe_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/recipe_num_ingredients"
            android:layout_toLeftOf="@id/list_item_recipe_image_view"
            android:layout_toStartOf="@id/list_item_recipe_image_view"
            android:padding="4dp"
            android:text="@string/input_string"
            android:visibility="invisible" />
    </RelativeLayout>

</com.woxthebox.draglistview.swipe.ListSwipeItem>